--- a/locale/fr.po
+++ b/locale/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: Audacity\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2017-11-06 13:24-0500\n"
-"PO-Revision-Date: 2017-12-10 02:32+0100\n"
+"PO-Revision-Date: 2017-12-10 17:31+0100\n"
 "Last-Translator: Olivier Humbert (trebmuh/olinuxx) <trebmuh@tuxfamily.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/audacity/language/"
 "fr/)\n"
@@ -11993,7 +11993,7 @@ msgstr "Enregistrement"
 
 #: src/prefs/DevicePrefs.cpp src/prefs/MidiIOPrefs.cpp
 msgid "De&vice:"
-msgstr "Préiphérique (&v)&nbsp;:"
+msgstr "Périphérique (&v)&nbsp;:"
 
 #: src/prefs/DevicePrefs.cpp
 msgid "Cha&nnels:"
