link to the francophone forum

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: Audacity\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2017-11-06 13:24-0500\n"
-"PO-Revision-Date: 2017-12-10 17:31+0100\n"
+"PO-Revision-Date: 2017-12-10 23:44+0100\n"
 "Last-Translator: Olivier Humbert (trebmuh/olinuxx) <trebmuh@tuxfamily.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/audacity/language/"
 "fr/)\n"
@@ -506,7 +506,7 @@ msgid ""
 "forum.audacityteam.org/|forum]]."
 msgstr ""
 "Si vous trouver un bogue ou que vous avez une suggestion pour nous, veuillez "
-"nous écrire, à notre [[http://forum.audacityteam.org/|forum (en anglais)]]. "
+"nous écrire, à notre [[https://forum.audacityteam.org/viewforum.php?f=7|forum francophone]]. "
 "Pour de l’aide, consultez les trucs et astuces sur notre "
 "[[http://wiki.audacityteam.org/|wiki (en anglais)]] ou visitez notre "
 "[[http://forum.audacityteam.org/|forum (en anglais)]]."
